--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,16 @@
 name = "notemancy-server"
 version = "0.1.0"
 edition = "2024"
+authors = ["Rishikanth Chandrasekaran rishikanthc@gmail.com"]
+description = "A REST API server for notemancy-web"
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/notemancy-pkm/notemancy-server"
+
 
 [dependencies]
 rocket = { version = "0.5.1", features = ["json"] }
-notemancy-core = { path = "../notemancy-core" }
+notemancy-core = "0.1.0"
 serde = { version = "1.0", features = ["derive"] }
 rocket_cors = "0.6.0"
 meilisearch-sdk = "0.28.0"
