--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ repository = "https://github.com/notemancy-pkm/notemancy-server"
 
 [dependencies]
 rocket = { version = "0.5.1", features = ["json"] }
-notemancy-core = "0.1.0"
+# notemancy-core = "0.1.0"
+notemancy-core = { path = "../notemancy-core" }
 serde = { version = "1.0", features = ["derive"] }
 rocket_cors = "0.6.0"
 meilisearch-sdk = "0.28.0"
