--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ rocket_cors = "0.6.0"
 meilisearch-sdk = "0.28.0"
 serde_json = "1.0.140"
 once_cell = "1.21.1"
-tokio = "1.44.1"
+tokio = { version = "1.44.1", features = ["full"] }
 serde_yaml = "0.9.34"
 chrono = "0.4.40"
+futures = "0.3"
